# longfellow-zk

./: .gitignore  CMakeLists.txt  Doxyfile  GUI_ZK_IMPLEMENTATION.md  LICENSE  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml  docs.yml
docs/: hugo.yaml  package-lock.json  package.json
docs/content/en/: _index.md  search.md
docs/specs/: Makefile  README.md  libzk.html  libzk.md  libzk.txt  libzk.xml  ligero.md  sumcheck.md  testvectors.md
docs/static/spec/: draft-google-cfrg-libzk-01.html
gui/: CHANGELOG.md  CMakeLists.txt  QUICKSTART.md  README.md  clean.sh  main.cpp  test_circuit.cpp  zk_workflow.cpp  zk_workflow.h
lib/: CMakeLists.txt
lib/CMake/: aarch64-linux-clang.cmake  i386-linux-clang.cmake  i386-linux-gcc.cmake  proofs.cmake
lib/algebra/: CMakeLists.txt  blas.h  bogorng.h  compare.h  convolution.h  crt.cc  crt.h  crt_convolution.h  crt_test.cc  fft.h  fft_interpolation.h  fft_interpolation_test.cc  fft_test.cc  fp.h  fp2.h  fp2_test.cc  fp_generic.h  fp_p128.h  fp_p256.h  fp_p384.h  fp_p521.h  fp_test.cc  hash.h  interpolation.h  interpolation_test.cc  limb.h  limb_test.cc  nat.cc  nat.h  nat_test.cc  nussbaumer.h  nussbaumer_test.cc  nussbaumerfp2_test.cc  permutations.h  poly.h  poly_test.cc  reed_solomon.h  reed_solomon_test.cc  rfft.h  rfft_test.cc  (+6 more)
lib/arrays/: CMakeLists.txt  affine.h  affine_test.cc  dense.h  eq.h  eqs.h  eqs_test.cc  sparse.h
lib/cbor/: CMakeLists.txt  host_decoder.h  host_decoder_test.cc
lib/circuits/anoncred/: CMakeLists.txt  README.md  generate_test_vectors.cc  ptrcred.h  ptrcred_age_over_18.h  ptrcred_age_over_18_test.cc  small.h  (+6 more)
lib/ec/: CMakeLists.txt  elliptic_curve.h  elliptic_curve_test.cc  p256.cc  p256.h
lib/gf2k/: CMakeLists.txt  gf2_128.h  gf2_128_bench.cc  gf2_128_test.cc  gf2poly.h  lch14.h  lch14_bench.cc  lch14_reed_solomon.h  lch14_reed_solomon_test.cc  lch14_test.cc  sysdep.h
lib/ligero/: CMakeLists.txt  ligero_param.h  ligero_prover.h  ligero_test.cc  ligero_transcript.h  ligero_verifier.h
lib/merkle/: CMakeLists.txt  merkle_commitment.h  merkle_tree.h  merkle_tree_test.cc
lib/proto/: CMakeLists.txt  circuit.h  circuit_test.cc
lib/random/: CMakeLists.txt  random.h  random_test.cc  secure_random_engine.h  transcript.h  transcript_test.cc
lib/sumcheck/: CMakeLists.txt  circuit.h  circuit_id.h  prover.h  prover_layers.h  quad.h  quad_test.cc  sumcheck_test.cc  testing.h  transcript_sumcheck.h  verifier.h  verifier_layers.h
lib/testing/: CMakeLists.txt  test_main.cc
lib/util/: CMakeLists.txt  ceildiv.h  ceildiv_test.cc  crc64.h  crypto.cc  crypto.h  log.cc  log.h  panic.h  readbuffer.h  serialization.h
lib/zk/: CMakeLists.txt  zk_common.h  zk_proof.h  zk_prover.h  zk_test.cc  zk_testing.h  zk_verifier.h
reference/verifier-service/: Dockerfile
(+892 files in other folders)
